<resources>
    <string name="app_name">HERide</string>
    <string name="action_cancel">Cancel</string>
    <string name="something_went_wrong">Oops..! Something went wrong.. try again</string>
    <string name="wait">Please Wait&#8230;.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel_request">Cancel Request?</string>
    <string name="choose_client">Choose an Email client :</string>
    <string name="message">Message</string>
    <string name="sign_up">SIGN UP </string>
    <string name="sign_in">SIGN IN </string>
    <string name="partner_login">PARTNER LOGIN</string>
    <string name="confirm_pick">CONFIRM PICKUP</string>
    <string name="confirm_pick_at">Confirm your pickup at</string>
    <string name="select_business_address">Select Business Address</string>
    <string name="select_drop_address">Select Destination Address</string>
    <string name="search">Searching&#8230;</string>
    <string name="selected_location">Selected Location</string>
    <string name="place_pin1">Place the pin on exact location \n or Allow location services</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="nonetwork">No Internet Connection</string>
    <string name="edit">Edit</string>
    <string name="alert">Alert</string>
    <string name="alert_cap">ALERT</string>
    <string name="messagealert">Message</string>
    <string name="network_problem">No Internet Connection</string>
    <string name="internet_check">Internet not available, Cross check your internet connectivity and try again!</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="phone_validating">Validating Phone Number&#8230;</string>
    <string name="login_email_phone_no">Email/Phone Number*</string>
    <string name="login">Login</string>
    <string name="forgotPassword">FORGOT PASSWORD ?</string>
    <string name="logging_in">Logging In&#8230;</string>
    <string name="or">OR</string>
    <string name="cant_cancel">Sorry! we can not process your request</string>
    <string name="accept_terms_privacy_policy"><![CDATA[I Accept Terms & Privacy Policy]]></string>
    <string name="emailAddress">Email Address</string>
    <string name="resetPswdUsingPhNoLabel">Enter your Phone Number to receive a \n Verification Code to reset password</string>
    <string name="terms_and_cond"> Terms &amp; Privacy Policy</string>
    <string name="password_mandatory">Password is mandatory</string>
    <string name="phone">Phone Number *</string>
    <string name="guest_name">Guest Name *</string>
    <string name="hotel">Hotel</string>
    <string name="guest_room_number">Room Number *</string>
    <string name="email">Email *</string>
    <string name="get_code">Get Verification Code</string>
    <string name="get_email">Get Verification Email</string>
    <string name="select_country">Select Country</string>
    <string name="Countrypicker">COUNTRY_PICKER</string>
    <string name="search_country">Search</string>
    <string name="resetPswdUsingEmailLabel">Enter your Email Address to receive a \n Link to reset password</string>
    <string name="enter_phone_mail">Enter your Phone Number/Mail Id</string>
    <string name="forget_pass_header">Forgot Password</string>
    <string name="email_invalid">Enter a valid Email Address</string>
    <string name="phone_invalid">Enter a valid Phone Number</string>
    <string name="mail_validating">Validating Email Id&#8230;</string>
    <string name="failImageUpload">Failed to Upload Image try again..</string>
    <string name="mandatory">This field is mandatory</string>
    <string name="company_address">Company Address</string>
    <string name="registering">Registering&#8230;</string>
    <string name="invalid_phone">Phone Number is Not valid</string>
    <string name="verifying_referral">Verifying Referral Code…</string>
    <string name="full_name">Full Name *</string>
    <string name="referral_code">Referral code</string>
    <string name="create_account_signup">Create Account</string>
    <string name="signup">Sign Up</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="individual">Individual</string>
    <string name="Business">Business</string>
    <string name="company_name">Company Name</string>
    <string name="password">Password*</string>
    <string name="password_not_matched">Password doesn\'t match</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="change_passwd">Change Password</string>
    <string name="passwordCantBeEmpty">Password cannot be empty\!</string>
    <string name="passwordInvalid">Password is invalid !</string>
    <string name="password_not_match">Password Not matched</string>
    <string name="resend_code">RESEND CODE\?</string>
    <string name="resending_code">Re-sending verification code…</string>
    <string name="verifying_code">Verifying OTP…</string>
    <string name="verify_number">Verify Mobile Number</string>
    <string name="verify_otp">Verify Code</string>
    <string name="otp_mandatory">OTP is mandatory</string>
    <string name="otp_info1">A Verification Code has been sent to</string>
    <string name="otp_info2">Please enter the code below.</string>
    <string name="Bulletu25cf">●</string>
    <string name="expiry">EXP</string>
    <string name="Card_Info">Card Details</string>
    <string name="load">Loading…</string>
    <string name="load_saved_cards">Loading saved cards…</string>
    <string name="deleting_cards">Deleting card…</string>
    <string name="delete_alert">Are you sure you want to delete this Card?</string>
    <string name="select_card">Select Card</string>
    <string name="addcard">Add Card</string>
    <string name="scancard">Scan card</string>
    <string name="add_account">Add Account</string>
    <string name="corporate_mail">CORPORATE E-MAIL*</string>
    <string name="corporate_profile">Corporate Profile</string>
    <string name="corporate_mail_add">Setup Corporate Profile</string>
    <string name="corporate_title">Choose this profile when booking work-related rides. Get invoices and expense reports in your official email.</string>
    <string name="setting_account">Setting up account…</string>
    <string name="success">Success</string>
    <string name="pick_profile">Pick a profile</string>
    <string name="submit">Submit</string>
    <string name="You_did_not_enter_valid_card">You did not enter a valid card</string>
    <string name="progressMessage">Adding Card&#8230;</string>
    <string name="done">Done</string>
    <string name="card">Card</string>
    <string name="double_press_exit">Press back again to exit!</string>
    <string name="pick_up_now">BOOK NOW</string>
    <string name="pick_up_leter">PRE BOOK</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="others">Others</string>
    <string name="personal">Personal</string>
    <string name="pick_time">Pickup Time</string>
    <string name="how_would_u_like_to_pay">How would you like to pay? </string>
    <string name="add_card_booking">Add/Choose a Card</string>
    <string name="no_drivers_available">No Drivers Available</string>
    <string name="trip_from">Trip from : </string>
    <string name="select_pick_pt">Select a pickup point</string>
    <string name="at">At</string>
    <string name="fetching_location">Fetching Location</string>
    <string name="no_drivers">No drivers</string>
    <string name="we_are_notAvailable">Sorry we don\'t operate in your area yet, please contact https://www.heride.com/
        to request our service&#8230;</string>
    <string name="alreadySetAsFavAdrs">This location is already saved as your favourite.</string>
    <string name="know_more">Know More</string>
    <string name="book">BOOK</string>
    <string name="enter_details">Please enter the details to proceed with Booking</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="ChoosefromGallery">Choose from Gallery</string>
    <string name="Remove">Remove</string>
    <string name="AddPhoto">Add Photo!</string>
    <string name="confirmLogout">Confirm LogOut</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="share_your_code">Share your code</string>
    <string name="subject_email">Haven\'t tried HERide yet?</string>
    <string name="invite">Invite</string>
    <string name="facebook">Facebook</string>
    <string name="mail">Email</string>
    <string name="twitter">Twitter</string>
    <string name="rate_googlePlay">Rate us on Google Play</string>
    <string name="like_onFacebook"> Like us on Facebook</string>
    <string name="legal">Legal</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="try_again1">TRY AGAIN</string>
    <string name="no_rides">No rides available</string>
    <string name="sorry">Sorry, no</string>
    <string name="not_available">available to your drop location now.</string>
    <string name="select_location_map">Search location from map</string>
    <string name="add_pick_note">Pickup Location</string>
    <string name="add_drop_note">Drop Location</string>
    <string name="recent">Recent</string>
    <string name="favourites">Favourites</string>
    <string name="popular">Popular Places</string>
    <string name="nameUrFav">Name your favourite(Ex. Home)</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="name">NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="e_mail">E-MAIL</string>
    <string name="password_cap">PASSWORD</string>
    <string name="my_profile">My Profile</string>
    <string name="view_profile">View profile</string>
    <string name="edit_name">Edit Name</string>
    <string name="fixInputFields">Fix Input fields</string>
    <string name="enter_new_name">Please enter new Name</string>
    <string name="phone_cant_empty">Phone number cannot be empty!</string>
    <string name="wallet_excess">Fare may vary after ride .You want pay excess amount via </string>
    <string name="recharge_now">Recharge Now</string>
    <string name="book_runner">Book A Ride</string>
    <string name="my_bookings">My Bookings</string>
    <string name="favorites">Favorite Drivers</string>
    <string name="rate_card">Rate Card</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="payments">Payments</string>
    <string name="wallet">My Wallet</string>
    <string name="corporate">Corporate Profile</string>
    <string name="support">Support</string>
    <string name="liveChat">Live Chat</string>
    <string name="emergency">Emergency Contacts</string>
    <string name="driver_preference">Driver Preferences</string>
    <string name="cash">Cash</string>
    <string name="apply">Apply</string>
    <string name="unassigned">UNASSIGNED</string>
    <string name="assigned">Assigned</string>
    <string name="past">PAST</string>
    <string name="alert_msg">Alert your dear ones in case of an emergency. Add then to your emergency contacts.</string>
    <string name="safety_msg">Let\'s make travel safer</string>
    <string name="add_new_contact">Add Contact</string>
    <string name="cant_add">You can add up to </string>
    <string name="who_will_ride">Who will be riding?</string>
    <string name="choose_who">Choose Who’…</string>
    <string name="confirm_rider">Confirming the rider will make sure trip details are messaged to the right person.</string>
    <string name="btn_confirm_ride">Confirm rider</string>
    <string name="helpcenter">Help Center</string>
</resources>