<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.karru.landing.history.view.BookingHistoryActivity">

    <include layout="@layout/layout_custom_action_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/divider1"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_history_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextAppearance="@style/customTabText"
        app:tabTextColor="@color/tab_unselect">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unassigned" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/assigned" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/past" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_history_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/stroke" />

</LinearLayout>
