<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_circle_corner">

    <TextView
        android:id="@+id/tv_alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/alert_cap"
        android:textSize="@dimen/text_size_16sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen_20dp"/>

    <TextView
        android:id="@+id/tv_alert_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_alert_title"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:text="@string/messagealert"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        android:foregroundGravity="center"
        android:layout_centerInParent="true"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/lightGray"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_below="@id/tv_alert_body"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/view"
        android:layout_marginBottom="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/tv_no"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="@dimen/dimen_12dp"
            android:background="@drawable/selector_white_layout"/>

        <View
            android:layout_width="@dimen/dimen_1dp"
            android:layout_height="match_parent"
            android:background="@color/lightGray"/>

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="@dimen/dimen_12dp"
            android:background="@drawable/selector_white_layout"/>
    </LinearLayout>

</RelativeLayout>